fix: layout adjustiments

--- a/src/views/errorPage.ejs
+++ b/src/views/errorPage.ejs
@@ -1,4 +1,4 @@
-<%- include('includes/head'); %>
+<%- include('includes/header'); %>
 <%- include('includes/nav'); %>
     <div class="container my-5">
         <div class="row">
