--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,45 +1,53 @@
-<%- include('includes/head'); %>
+<%- include('includes/header'); %>
     <%- include('includes/nav'); %>
 
-        <div class="container-fluid d-flex align-items-center"
-            style="background-color: rgb(247, 247, 247);height: 50vh;">
-            <div class="row w-100">
-                <h1 class="text-center">Bem-vindo ao TaskMaster: Sua Lista de Tarefas Simplificada</h1>
-                <p class="text-center lead pt-1">No TaskMaster, acreditamos que a organização é a chave para uma vida
-                    produtiva e equilibrada. Nossa plataforma foi criada para ajudar você a gerenciar suas tarefas
-                    diárias de maneira eficiente e intuitiva. Seja você um profissional ocupado, um estudante dedicado
-                    ou alguém que simplesmente deseja manter a vida em ordem, o TaskMaster é a solução perfeita para
-                    suas necessidades.</p>
-                <div class="d-flex justify-content-center pt-2">
-                    <a class="btn btn-primary btn-lg" href="/register">Começar</a>
+        <div class="container-fluid primary-containers-home d-flex align-items-center first-container-home">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-10 text-center">
+                    <h1>Bem-vindo ao TaskMaster: Sua Lista de Tarefas Simplificada</h1>
+                    <p class="lead pt-1">No TaskMaster, acreditamos que a organização é a chave para uma
+                        vida
+                        produtiva e equilibrada. Nossa plataforma foi criada para ajudar você a gerenciar suas tarefas
+                        diárias de maneira eficiente e intuitiva. Seja você um profissional ocupado, um estudante
+                        dedicado
+                        ou alguém que simplesmente deseja manter a vida em ordem, o TaskMaster é a solução perfeita para
+                        suas necessidades.</p>
+                    <div class="pt-2">
+                        <a class="btn btn-primary btn-lg" href="/register">Começar</a>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="container-fluid d-flex align-items-center justify-content-center vh-50">
-            <div class="row w-50">
-                <div class="flex-column">
-                    <h1 class="text-left">Um aplicativo simples</h1>
-                    <p class="text-left lead">O TaskMaster é um aplicativo incrivelmente simples e intuitivo.
+        <div class="container-fluid secondary-containers-home d-flex justify-content-center">
+            <div class="row align-items-center col-md-10 pt-5 pb-5">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6 text-left">
+                    <h1>Um aplicativo simples</h1>
+                    <p class="lead">O TaskMaster é um aplicativo incrivelmente simples e intuitivo.
                         Desenvolvido para tornar sua vida mais
                         organizada e produtiva, o aplicativo TaskMaster combina funcionalidades avançadas com uma
                         interface
                         amigável, permitindo que você se concentre no que realmente importa.
                     </p>
-                    <a href="#" class="btn btn-primary btn-lg">Saiba mais sobre o TaskMaster</a>
+                    <a href="#" class="btn btn-primary btn-lg mb-3">Saiba mais sobre o TaskMaster</a>
                 </div>
-            </div>
-            <div class="row w-50 p-5">
-                <img class="img-fluid" src="/assets/img/demo_image.png" alt="demo-app-img">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                    <img class="img-fluid" src="/assets/img/demo_image.png" alt="demo-app-img">
+                </div>
             </div>
         </div>
 
-        <div class="container-fluid d-flex align-items-center"
-            style="background-color: rgb(247, 247, 247);height: 50vh;">
-            <div class="row w-100">
-                <h1 class="text-center">Registre mais do que apenas tarefas diárias na sua lista de pendências</h1>
-                <p class="text-center lead pt-1">Despeça-se das listas de pendências manuscritas e mantenha todas as
-                    informações essenciais para concluir seu trabalho.</p>
+        <div class="container-fluid primary-containers-home d-flex align-items-center justify-content-center">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-10 text-center">
+                    <h1>Anote mais do que apenas tarefas diárias na sua lista de pendências</h1>
+                    <p class="lead pt-1">Despeça-se das listas de pendências manuscritas e mantenha todas as
+                        informações essenciais para concluir seu trabalho.
+                    </p>
+                    <div class="pt-2">
+                        <a class="btn btn-primary btn-lg" href="/register">Registrar-se</a>
+                    </div>
+                </div>
             </div>
         </div>
 
