--- a/src/views/includes/footer.ejs
+++ b/src/views/includes/footer.ejs
@@ -3,7 +3,7 @@ integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIe
 crossorigin="anonymous"></script>
 <script src="/assets/js/bundle.js"></script>
 
-<footer class="text-center mt-4 mb-4">
+<footer class="text-center p-3 footer">
     <p>&copy; <%= currentYear %> TaskMaster. Todos os direitos reservados.</p>
     <nav>
         <a class="link-secondary link-offset-2 link-underline link-underline-opacity-0" href="#">Segurança</a> |
