--- a/src/views/createTask.ejs
+++ b/src/views/createTask.ejs
@@ -1,9 +1,8 @@
-<%- include('includes/head'); %>
+<%- include('includes/header'); %>
     <%- include('includes/nav'); %>
         <div class="container-sm mx-auto vh-100">
-            <div class="row justify-content-center">
-                <div class="col-4 my-5 border rounded p-4 w-50" style="background-color: rgb(247, 247, 247);">
-                    <div>
+            <div class="row d-flex justify-content-center">
+                <div class="col-10 col-sm-10 col-md-10 col-lg-7 my-5 border rounded p-4 div-createTask">
                         <h1 class="text-center">Criar Tarefa</h1>
                         <p class="text-center lead">Crie uma nova tarefa abaixo:</p>
                         <%- include('includes/messages'); %>
@@ -40,7 +39,6 @@
                                     <a href="/"><button type="button" class="btn btn-dark">Cancelar</button></a>
                                 </div>
                             </form>
-                    </div>
                 </div>
             </div>
         </div>
