--- a/src/views/editTask.ejs
+++ b/src/views/editTask.ejs
@@ -1,9 +1,8 @@
-<%- include('includes/head'); %>
+<%- include('includes/header'); %>
     <%- include('includes/nav'); %>
         <div class="container-sm mx-auto vh-100">
-            <div class="row justify-content-center">
-                <div class="col-4 my-5 border rounded p-4 w-50" style="background-color: rgb(247, 247, 247);">
-                    <div>
+                <div class="row d-flex justify-content-center">
+                    <div class="col-10 col-sm-10 col-md-10 col-lg-7 my-5 border rounded p-4 div-editTask">
                         <h1 class="text-center">Editar Tarefa</h1>
                         <p class="text-center lead">Edite a tarefa abaixo:</p>
                         <%- include('includes/messages'); %>
@@ -53,7 +52,6 @@
                                             data-bs-toggle="modal" data-bs-target=".modal">Excluir</button>
                                     </div>
                                 </form>
-                    </div>
                 </div>
             </div>
         </div>
