--- a/src/views/includes/nav.ejs
+++ b/src/views/includes/nav.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" data-bs-theme="dark" style="background-color: #141A21">
+<nav class="navbar navbar-expand-lg navMenu" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
             <img class="rounded" src="/assets/img/logo/logo-1.svg" alt="TaskMaster-logo" width="100px" height="50px">
