--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,12 +1,12 @@
-<%- include('includes/head') %>
+<%- include('includes/header') %>
     <%- include('includes/nav'); %>
         <div class="container-fluid min-vh-100">
             <div class="row justify-content-center">
-                <div class="col-3 mt-5 pb-3 border rounded p-4" style="background-color: rgb(247, 247, 247);">
+                <div class="col-10 col-sm-8 col-md-6 col-lg-4 mt-5 p-4 pb-4 border rounded div-login">
                     <div>
                         <h1 class="text-center">Entrar</h1>
                         <p class="text-center lead">Se você já possui uma conta, logue-se abaixo:</p>
-                            <%- include('includes/messages'); %>
+                        <%- include('includes/messages'); %>
                             <form class="login-form-validation" action="/login" method="post">
                                 <input type="hidden" name="_csrf" value=<%=csrfToken %>>
                                 <div class="mb-3">
@@ -24,11 +24,17 @@
                             </form>
                     </div>
                 </div>
-                <div class="text-center mt-4">
-                    <p>Ainda não possui uma conta? <a href="/register"
-                            class="text-primary text-decoration-none">Registrar-se</a></p>
-                    <p>Esqueceu sua senha? <a href="#" class="text-primary text-decoration-none">Resetar
-                            senha</a></p>
+                <div class="mt-4 justify-content-center d-flex">
+                    <div class="column">
+                        <div class="row">
+                            <p>Ainda não possui uma conta? <a href="/register"
+                                    class="text-primary text-decoration-none">Registrar-se</a></p>
+                        </div>
+                        <div class="row">
+                            <p>Esqueceu sua senha? <a href="#" class="text-primary text-decoration-none">Resetar
+                                    senha</a></p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
