--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,8 +1,8 @@
-<%- include('includes/head') %>
+<%- include('includes/header') %>
     <%- include('includes/nav'); %>
         <div class="container-fluid min-vh-100">
             <div class="row justify-content-center">
-                <div class="col-3 mt-5 pb-3 border rounded p-4" style="background-color: rgb(247, 247, 247);">
+                <div class="col-10 col-sm-8 col-md-6 col-lg-4 mt-5 p-4 pb-4 border rounded div-login">
                     <div>
                         <h1 class="text-center">Registrar-se</h1>
                         <p class="text-center lead">Se você ainda não possui uma conta, cadastre-se abaixo:</p>
