--- a/src/views/createTask.ejs
+++ b/src/views/createTask.ejs
@@ -2,7 +2,7 @@
     <%- include('includes/nav'); %>
         <div class="container-sm mx-auto vh-100">
             <div class="row d-flex justify-content-center">
-                <div class="col-10 col-sm-10 col-md-10 col-lg-7 my-5 border rounded p-4 div-createTask">
+                <div class="col-10 col-sm-10 col-md-10 col-lg-7 my-5 border rounded p-4 div-create-task">
                         <h1 class="text-center">Criar Tarefa</h1>
                         <p class="text-center lead">Crie uma nova tarefa abaixo:</p>
                         <%- include('includes/messages'); %>
@@ -14,8 +14,7 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="description" class="form-label">Descrição</label>
-                                    <textarea type="text" class="form-control" name="description"
-                                        style="height: 100px;"></textarea>
+                                    <textarea type="text" class="form-control" name="description"></textarea>
                                 </div>
 
                                 <div class="mb-3">
