--- a/src/views/editTask.ejs
+++ b/src/views/editTask.ejs
@@ -15,8 +15,7 @@
                                     </div>
                                     <div class="mb-3">
                                         <label for="description" class="form-label">Descrição</label>
-                                        <textarea type="text" class="form-control" name="description"
-                                            style="height: 100px;"><%= task.description %></textarea>
+                                        <textarea type="text" class="form-control" name="description"><%= task.description %></textarea>
                                     </div>
 
                                     <div class="mb-3">
