--- a/src/views/includes/filterModal.ejs
+++ b/src/views/includes/filterModal.ejs
@@ -1,7 +1,7 @@
 <div class="modal" tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
-        <div class="modal-header" style="background-color: rgb(247, 247, 247);">
+        <div class="modal-header">
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -13,7 +13,7 @@
                     <option value="highPriority">Prioridade Alta</option>
             </select>
         </div>
-        <div class="modal-footer" style="background-color: rgb(247, 247, 247);">
+        <div class="modal-footer">
           <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Cancelar</button>
           <button type="button" class="btn btn-primary filter-button" data-bs-dismiss="modal">Filtrar</button>
         </div>
