--- a/src/views/errorPage.ejs
+++ b/src/views/errorPage.ejs
@@ -1,6 +1,6 @@
 <%- include('includes/header'); %>
 <%- include('includes/nav'); %>
-    <div class="container my-5">
+    <div class="container my-5 min-vh-100">
         <div class="row">
             <h1 class="text-center text-danger">Ocorreu um erro</h1>
             <p class="text-center lead">Um erro inesperado aconteceu. Aguarde alguns minutos e tente novamente.
